Fix for containers that have scrollbars.
The pop-up now hides itself whenever a container that it is in happens
to scroll. This means it should never be out of position in this
situation.

--- a/demo/demo.less
+++ b/demo/demo.less
@@ -26,6 +26,7 @@ h1, h2, h3, h4
 	text-transform: uppercase;
 	margin: 0px 0px 16px 0px;
 	border-radius: 4px;
+    clear: both;
 }
 
 h1
@@ -66,6 +67,7 @@ p
     border: solid 1px #CCC;
     margin: 16px 0px;
     border-radius: 4px;
+	background-color: #FFF; 
 
     > h1, h2, h3, h4
     {
@@ -92,6 +94,17 @@ p
 	display: inline-block;
 	min-width: 160px;
 	margin: 0px 0px 4px 0px;
+}
+
+form
+{
+    .box
+    {
+        margin: 16px;
+        width: 300px; 
+        min-height: 140px;
+        float: left;
+    }
 }
 
 .button
